<?xml version="1.0"?>
<package>
  <name>ros_myo</name>
  <version>0.0.1</version>
  <description>The ros_myo package</description>

  <maintainer email="tjwatson@wpi.edu">tjwatson</maintainer>
  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
